2010-01-02  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/etc/KnuthBendix.py
	(KnuthBendix.make_confluent.add_reduction): Added missing argument
	to % in error message

2009-08-30  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Use.py (_GLUECLAMP_): Added loadall method

	Version 0.1.9
	
2009-06-23  Sverker Nilsson  <sverker@sverker-laptop>

	* specs/index.gsl: download mentions today's date

	* guppy/sets/test.py: Made it try numpy.random instead of
	RandomArray; revert to random if no numpy.random could be
	installed so more tests can get done albeit slower.

	* MANIFEST.in: added specs/*.py

	* ANNOUNCE : Added advertisement for http://sncs.se

2009-06-18  Sverker Nilsson  <sverker@sverker-laptop>

	* specs/index.gsl: Changed wording of tested pythons to exclude
	having tested with python2.3 in 32 bit mode.

	* src/sets/bitset.c (bits_first,bits_last): Changed to use #if
	directive to get rid of warnings in 32-bit mode.

	* src/sets/bitset.h (NyBits_N): Changed definition to use
	ULONG_MAX to be able to use it in preprocessor #if directive.

	* README (TEST): changed sample output to begin with test of sets.

	* setup.py (doit): long_description now starts with newline to
	look better in PKG-INFO

	* ANNOUNCE: added wordings about heapy_tutorial, pop bug and test.

	* guppy/heapy/test/test_all.py: added dependencies test

	* specs/index.gsl: Added heapy_tutorial link

	* specs/genguppydoc.py (GenGuppyDoc.gengsl): generate heapy_tutorial

	* specs/heapy_tutorial.gsl: new file

	* guppy/heapy/test/test_dependencies.py : new file

2009-06-16  Sverker Nilsson  <sverker@sverker-laptop>

	* specs/index.gsl: Added interactive help to example which was
	moved to documentation section.

	* src/sets/bitset.c (mutbitset_pop): changed type of i from NyBit to
	int to work in 64 bits with test7 in sets/test.py .
	(bits_last): made it work with 64 bits by testing the upper 32-bit half
	(bits_first): made it use NyBits_N instead of NyBits_64 